# phyrax

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  EPICS.md  LICENSE  README.md  manifest  pyproject.toml  vdb2enadmpelqkvtjtvp38khb1geilfc
.beads/: metadata.json
.claude/rules/: config.md  database.md  devtools.md  general.md  tui.md
docs/actions/: linear.md  obsidian.md  summarize.md  ticktick.md  todoist.md
scripts/: _fixture_env.sh  demo.py  dev.sh  dev_console.sh  tui_harness.sh
src/phyrax/: __init__.py  agent.py  agent_schemas.py  app.py  bundler.py  cli.py  composer.py  config.py  database.py  exceptions.py  logging.py  models.py  sender.py
src/phyrax/actions/: __init__.py  builtins.py  engine.py
src/phyrax/ftux/: __init__.py  wizard.py  wizard.tcss
src/phyrax/tui/: __init__.py  theme.py
src/phyrax/tui/screens/: __init__.py  bundle_focus.py  chat.py  chat.tcss  compose.py  compose.tcss  inbox.py  inbox.tcss  outbox.py  outbox.tcss  thread_view.py  thread_view.tcss
src/phyrax/tui/widgets/: __init__.py  action_menu.py  action_menu.tcss  command_palette.py  command_palette.tcss  feedback_modal.py  feedback_modal.tcss  status_bar.py  status_bar.tcss  theme_selector.py  theme_selector.tcss  thread_list.py  thread_list.tcss
tests/: conftest.py  test_actions.py  test_agent.py  test_agent_schemas.py  test_agent_zfc.py  test_app.py  test_bundler.py  test_cli.py  test_composer.py  test_config.py  test_database.py  test_exceptions.py  test_ftux.py  test_models.py  test_sender.py
tests/fixtures/: maildir_builder.py
tests/tui/: test_app_theme.py  test_chat.py  test_e2e_inbox.py  test_inbox_screen.py  test_navigation.py  test_theme_switcher.py  test_thread_view.py
tests/tui/__snapshots__/test_e2e_inbox/: test_inbox_snapshot.raw
