[project]
name = "phyrax"
version = "0.1.0"
description = "A hyper-optimized, AI-assisted CLI email workflow focused on bundling, task management, and speed."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0",
    "typer>=0.12",
    # notmuch2 is a system package — install via: sudo apt install python3-notmuch2 libnotmuch-dev
    # The PyPI release is broken; use the system-provided 0.38.x binding with --system-site-packages venv.
    "pydantic>=2.0",
    "platformdirs>=4.0",
    "html2text>=2020.1.16",
]

[project.scripts]
phr = "phyrax.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phyrax"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-textual-snapshot>=0.4",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
